[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/main/puzzle/PuzzleHudStyleBox.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/ui/blogger-sans-medium-18.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/main/puzzle/results-hud.gd" type="Script" id=3]
[ext_resource path="res://src/main/puzzle/results-label.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/chat/bebebe.wav" type="AudioStream" id=5]
[ext_resource path="res://src/main/ui/MoneyLabel.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/main/puzzle/money-label-tween.gd" type="Script" id=7]
[ext_resource path="res://assets/ui/cheat-enable.wav" type="AudioStream" id=8]

[node name="ResultsHud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyLabel" parent="." instance=ExtResource( 6 )]
margin_left = 0.0
margin_top = -32.0
margin_right = 128.0
margin_bottom = 0.0

[node name="MoneyLabelTween" type="Tween" parent="."]
script = ExtResource( 7 )

[node name="ResultsLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 774.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
custom_styles/normal = ExtResource( 1 )
custom_fonts/normal_font = ExtResource( 2 )
scroll_following = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BebebeSound" type="AudioStreamPlayer" parent="ResultsLabel"]
stream = ExtResource( 5 )
volume_db = -12.0
bus = "Voice Bus"

[node name="ShowResultsSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -8.0
bus = "Main Bus"
[connection signal="text_shown" from="ResultsLabel" to="." method="_on_ResultsLabel_text_shown"]
